k8s/notification-service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-v2
  namespace: cmm707-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
      version: v2
  template:
    metadata:
      labels:
        app: notification-service
        version: v2
    spec:
      containers:
      - name: notification-service-v2
        image: 710271914931.dkr.ecr.ap-southeast-1.amazonaws.com/notification-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
        readinessProbe:
          httpGet:
            path: /notifications/health
            port: 8002
          initialDelaySeconds: 5
          periodSeconds: 10
