k8s/sales-integration-service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-integration-service-v2
  namespace: cmm707-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-integration-service
      version: v2
  template:
    metadata:
      labels:
        app: sales-integration-service
        version: v2
    spec:
      containers:
      - name: sales-integration-service-v2
        image: 710271914931.dkr.ecr.ap-southeast-1.amazonaws.com/sales-integration-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /sales/health
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 10
