k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: cmm707-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: notification-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: cmm707-microservices
spec:
  selector:
    app: notification-service
  ports:
  - port: 8002
    targetPort: 8002
    nodePort: 30082
  type: NodePort
